// Copyright 2000-2021 JetBrains s.r.o. and other contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.

plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.2.1'
}

group 'org.intellij.sdk'
version '1.2.3'

sourceCompatibility = 11
repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.22'
    implementation 'de.plushnikov.lombok-intellij-plugin:intellij-facade-factory:0.5'
    implementation 'com.alibaba:fastjson:1.2.83'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}

intellij {
    version = '2020.3.2'
    plugins = ['com.intellij.java']
}

buildSearchableOptions {
    enabled = false
}

patchPluginXml {
    version = project.version
    sinceBuild = '193.*'
    untilBuild = '231.*'
}

runIde {
    jvmArgs '-Xmx4G'
    jvmArgs '-Xss10M'
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

publishPlugin {
    // plugins.jetbrains.com 配置的插件 token
    token = System.getenv("ENV.MeterSphereToken")
}

publishPlugin {
//    channels = ['stable'] 发布正式版使用这个渠道
    channels = ['beta']
}